--- a/home/home.html
+++ b/home/home.html
@@ -9,6 +9,59 @@
 <body>
     <header>
         
+        <div class="logo">
+            <a href="#"><h1>CoffeBar</h1></a>
+        </div>
+
+        <ul>
+            <li class="menu-button" onclick="showSidebar()"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#321704"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
+        </ul>
+        <nav>
+            <ul class="sidebar">
+                <li onclick="hideSidebar()">
+                    <a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a>
+                </li>
+
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Menu</a></li>
+                <li><a href="#">Linhas</a></li>
+                <li><a href="#">Produtos</a></li>
+                <li><a href="#">Sobre</a></li>
+                <li><a href="#">Lojas</a></li>
+
+                
+            </ul>
+
+            <ul id="menu2">
+
+                <li class="hideOnMobile"><a href="#">Home</a></li>
+                <li class="hideOnMobile"><a href="#">Menu</a></li>
+                <li class="hideOnMobile"><a href="#">Linhas</a></li>
+                <li class="hideOnMobile"><a href="#">Produtos</a></li>
+                <li class="hideOnMobile"><a href="#">Sobre</a></li>
+                <li class="hideOnMobile"><a href="#">Lojas</a></li>
+            </ul>
+        </nav>
+
+        <script>
+            function showSidebar() {
+                document.querySelector('.sidebar').classList.add('open');
+            }
+
+            function hideSidebar() {
+                document.querySelector('.sidebar').classList.remove('open');
+            }
+        </script>
+        <script>
+            function showSidebar(){
+                document.querySelector('.sidebar').style.display = 'flex';
+            }
+
+            function hideSidebar(){
+                document.querySelector('.sidebar').style.display = 'none';
+        }
+        </script>
+
     </header>
     <main>
 
@@ -20,10 +73,10 @@
             <h1>Nossos Produtos</h1>
             <br>
             <div class="cards-produtos">
-                <a href=""><img src="https://i.pinimg.com/736x/0f/ce/2b/0fce2bdb4aed7413fb131bd0506fbd2e.jpg" alt=""></a>
-                <a href=""><img src="https://i.pinimg.com/1200x/1b/51/6b/1b516b55bacbb91dc10a7bc50eca65d9.jpg" alt=""></a>
-                <a href=""><img src="https://i.pinimg.com/736x/e1/55/95/e155955a5941c892829a4e919447c7f8.jpg" alt=""></a>
-                <a href=""><img src="https://i.pinimg.com/736x/13/c6/c4/13c6c436e8dde32676696269c740f98e.jpg" alt=""></a>
+                <a href=""><img src="./img/caffee_Prancheta 1.svg" alt=""></a>
+                <a href=""><img src="./img/doces_Prancheta 1.svg" alt=""></a>
+                <a href=""><img src="./img/lanche_Prancheta 1.svg" alt=""></a>
+                <a href=""><img src="./img/brunch_Prancheta 1.svg" alt=""></a>
             </div>
         </section>
 
